<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/tv_mensaje"
        android:text="@string/alta_usuario"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/tv_mensaje"
        android:hint="@string/nombre_completo"
        android:id="@+id/name"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/name"
        android:hint="@string/telefono"
        android:inputType="number"
        android:id="@+id/telefono"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/telefono"
        android:hint="@string/email"
        android:id="@+id/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/email"
        android:hint="@string/twitter"
        android:id="@+id/twitter"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:text="@string/siguiente"
        android:id="@+id/bt_enviar"

        />
</RelativeLayout>